# SuperSlideCreator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  requirements.txt
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  deck.rs  images.rs  lib.rs  projects.rs  provider.rs  realtime.rs  refs.rs  relay.rs  slide_agent.rs  slide_prompt.txt
src-tauri/tests/: editor_http.rs
voice_agent/: auth.py  client.py  config.py  deck.py  logging_setup.py  main.py  server.py  slide_agent.py  tools.py
web/: app.js  editor.css  editor.html  editor.js  index.html  style.css  worklet.js
